--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -21,4 +21,14 @@ Faith and Xander marry after college, and have children. Buffy is able to cure
 Angel out of his vampiredom, and he becomes a slayer, marries Buffy and they
 have children.
 
+Willow cures Oz out of his werewolfness, becomes Dr. Willow Rosenberg and one
+of the most powerful witches (or wizards) known on Earth. Oz becomes a wizard
+too - he and Willow marry and have some children.
+
+Giles becomes the principal of Sunnydale high school where the whole gang
+is working as teachers, teaching next generations of budding slayers,
+witches/wizards, and watchers, making Sunnydale the Mecca of the slaying
+world.
+
+
 =cut
