Add more links.

--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -11,27 +11,30 @@ concept were created by L<Shlomi Fish|http://www.shlomifish.org/>.
 
 =head2 What happened from 2000/2001
 
-Faith turned out to have been a good slayer after all, and prevented the mayor
-from ascending properly in the last minute. She joins forces with Buffy and the
-Scooby gang, as an equal co-slayer.
+L<Faith|http://buffy.wikia.com/wiki/Faith_Lehane> turned out to have been a
+good slayer after all, and prevented the mayor from ascending properly in
+the last minute. She joins forces with Buffy and the
+L<Scooby Gang|http://buffy.wikia.com/wiki/Scooby_Gang>, as an equal
+co-slayer.
 
-Faith starts dating Xander, and they end up falling in love. Xander grows more
-confident, and after training and encouragement from Buffy and Faith becomes
-the world's first qualified '''male''' slayer, paving the road for other male
-slayers.
+Faith starts dating L<Xander|http://buffy.wikia.com/wiki/Xander>, and they end
+up falling in love. Xander grows more confident, and after some training and
+some encouragement from Buffy and Faith becomes the world's first qualified
+B<male> slayer, paving the road for other male slayers.
 
 Faith and Xander marry after college, and have children. Buffy is able to cure
-Angel out of his vampiredom, and he becomes a slayer, marries Buffy and they
-have children.
+L<Angel|http://buffy.wikia.com/wiki/Angel> out of his vampiredom, and he
+becomes a slayer, marries Buffy and they have children.
 
-Willow cures Oz out of his werewolfness, becomes Dr. Willow Rosenberg and one
-of the most powerful witches (or wizards) known on Earth. Oz becomes a wizard
-too - he and Willow marry and have some children.
+L<Willow|http://buffy.wikia.com/wiki/Willow> cures Oz out of his
+werewolfness, becomes Dr. Willow Rosenberg, Ph.D., and one
+of the most powerful witches (or wizards) known on Earth. Oz becomes a superb
+wizard as well. he and Willow marry and have some children.
 
-Giles becomes the principal of Sunnydale high school where the whole gang
-is working as teachers, teaching next generations of budding slayers,
-witches/wizards, and watchers, making Sunnydale the Mecca of the slaying
-world.
+L<Giles|http://buffy.wikia.com/wiki/Rupert_Giles> becomes the principal of
+Sunnydale high school where the whole gang is working as teachers, teaching
+next generations of budding slayers, witches/wizards, watchers, etc. making
+Sunnydale the Mecca of the slaying world.
 
 L<https://en.wikipedia.org/wiki/Cordelia_Chase> moves out of Sunnydale, becomes
 a scholar (Ph.D. + Professor), marries, has children, and mostly stays out of
