--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -71,4 +71,20 @@ up.
 
 =head3 The High School Freshmen
 
+=head4 Rebecca Williams
+
+One of the protagonist is a high school freshman wannabe-slayer called Rebecca
+(or Becky for short) who is a Maternal Jewess and being a JAP is part of her
+image.
+
+The tagline surrounding her is "You've got a lot of potential."
+
+Heh, it's kind-of-like an in-your-face ironic jab.
+
+Mel Brooks also did some stuff on it.
+
+She's not really a JAP.
+
+And certainly isn't when the film ends and she saves the day several times.
+
 =cut
