--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -71,7 +71,7 @@ up.
 
 =head3 The High School Freshmen
 
-=head4 Rebecca Williams
+=head4 Rebecca Shepherd
 
 One of the protagonist is a high school freshman wannabe-slayer called Rebecca
 (or Becky for short) who is a Maternal Jewess and being a JAP is part of her
