--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -70,10 +70,10 @@ juggle between various priorities:
 
 =head3 The High School Freshmen
 
-=head4 Rebecca Shepherd
+=head4 Rebecca “Becky” Shepherd
 
 One of the protagonist is a high school freshman wannabe-slayer called Rebecca
-(or Becky for short) who is a Maternal Jewess and being a JAP is part of her
+(or “Becky” for short) who is a Maternal Jewess and being a JAP is part of her
 image.
 
 The tagline surrounding her is "You've got a lot of potential."
