--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -126,4 +126,18 @@ L<https://en.wikipedia.org/wiki/Twenty_Thousand_Leagues_Under_the_Sea> and then 
 told her many Jewish married men offered to have an affair with her.
 ** Even some men can see beyond one's unaesthetical look.
 
+* Sarah Michelle Gellar (from the Selinaverse) gets summoned as a kindred
+(from the Selinaverse) spirit.
+* - Willow: Buffy?
+  - SMG: That's not my name, my.. oh wait! No I'm actually Sarah Michelle Perez,
+  but everyone knows me as Sarah Michelle Gellar.
+  - Willow and Giles: Who?
+  - SMG: oh great! A world where I wasn't born.
+    Let's get to business. [Uses her mobile] General, your men can come now.
+  [ Lots of sounds of Jeeps, Helicopeters and infantry soldiers crying "Hail, Buffy!" ].
+
+* Helicopter soldier: "We gave them a fair match."
+* Buffy looking at the match which looks awful: "Who says it's fair!".
+* (Last Action Hero / Hamlet scene reference.)
+
 =cut
