--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -112,7 +112,7 @@ around our children.
 ** Buffy: "Wow! You have so much potential! I think you'll make a wonderful slayer."
 
 * Cliff fought against Chuck Norris recently and won in two out of three rounds.
-** Chuck Norris told him "You're not a loser if you keep fighting and losing manybattles. You're a bigger loser if you stop." 
+** Chuck Norris told him "You're not a loser if you keep fighting and losing manybattles. You're a bigger loser if you stop."
 ** He also fought against Summer Glau once and won all rounds.
 *** "She's pretty good, but loses many fights."
 
@@ -126,7 +126,7 @@ L<https://en.wikipedia.org/wiki/Twenty_Thousand_Leagues_Under_the_Sea> and then 
 told her many Jewish married men offered to have an affair with her.
 ** Even some men can see beyond one's unaesthetical look.
 
-* Sarah Michelle Gellar (from the Selinaverse) gets summoned as a kindred
+* Sarah Michelle Gellar (from the L<Selinaverse,http://buffyfanfiction.wikia.com/wiki/Selinaverse>) gets summoned as a kindred
 (from the Selinaverse) spirit.
 * - Willow: Buffy?
   - SMG: That's not my name, my.. oh wait! No I'm actually Sarah Michelle Perez,
