--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -105,7 +105,7 @@ And certainly isn't when the film ends and she saves the day several times.
 around our children.
 
 * Buffy factoids - L<http://www.shlomifish.org/humour/bits/facts/Buffy/>
-** Not reall true.
+** Not really true.
 ** Buffy: "I fought against Chuck Norris shortly after high school graduation and lost."
 ** Buffy is looking for an old book about cooking in the library.
 ** Becky finds the recipe using her Net-wisdom.
