Convert to CC-by-nc-sa

--- a/LICENSE.pod
+++ b/LICENSE.pod
@@ -7,7 +7,7 @@
 The screenplay “Buffy: a Few Good Slayers” is original,
 and as far as I am concerned is Copyright by Shlomi Fish, 2014 and
 available under the
-L<http://creativecommons.org/licenses/by-sa/3.0/>, either version 3.0 or at
+L<http://creativecommons.org/licenses/by-nc-sa/3.0/>, either version 3.0 or at
 your option any later version.
 
 =cut
