--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -181,4 +181,26 @@ L<Farrel> is a tribute to
 L<https://en.wikipedia.org/wiki/Terry_Farrell_%28actress%29> who played
 L<http://en.memory-alpha.org/wiki/Jadzia_Dax> on I<Star Trek: Deep Space 9>.
 
+=head3 Sarah Anne Eisenman
+
+Sarah is a reference to L<http://en.wikipedia.org/wiki/Sarah_Michelle_Gellar>
+which in the Beckyverse, Buffy believes is the first name of her kindred
+spirit.
+
+Anne was the middle name of L<http://buffy.wikia.com/wiki/Buffy_Summers> from
+the show.
+
+L<Eisenman> is a reference to L<Tamar Eisenman|http://www.eisenwoman.com/> (
+L<Twitter|http://twitter.com/eisenwoman>,
+L<Facebook|http://www.facebook.com/tamareisenman>,
+L<YouTube|http://www.youtube.com/user/eisenwoman> ) a.k.a “Eisenwoman” who
+is an Israeli singer I am partial too. This lastname was in part picked for
+its natural L<Ashkenazi Jewish|http://en.wikipedia.org/wiki/Ashkenazi_Jews>
+ring, and possibly its similiarty to
+http://en.wikipedia.org/wiki/Natalie_Portman ’s last name, who is the actress
+who both plays Sarah Anne Eisenman on the fictional show
+I<Sarah the Vampire Slayer>, and who, in the Beckyverse, was the Alpha female
+of the L<Web 1.0|http://en.wikipedia.org/wiki/Web_1.0#.22Web_1.0.22> era (and
+somewhat later) instead of Sarah Michelle Gellar.
+
 =cut
