--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -137,7 +137,7 @@ And certainly isn't when the film ends and she saves the day several times.
       [ Lots of sounds of Jeeps, Helicopeters and infantry soldiers crying "Hail, Buffy!" ].
 
     * Helicopter soldier: "We gave them a fair match."
-    * Buffy looking at the match which looks awful: "Who says it's fair!".
+    * Buffy looking at the match which looks awful: "Who says it's fair?".
     * (Last Action Hero / Hamlet scene reference.)
 
 =head2 Etymology of the Characters’ names
