--- a/buffy--a-few-good-slayers/ideas/ideas.pod
+++ b/buffy--a-few-good-slayers/ideas/ideas.pod
@@ -126,7 +126,7 @@ And certainly isn't when the film ends and she saves the day several times.
     * Chankey saying he read
     L<https://en.wikipedia.org/wiki/Twenty_Thousand_Leagues_Under_the_Sea> and then knew better than to not seize opportunities because he's an Indian or whatever.
     ** He's a chick magnet at Sunnydale High School and enjoys it.
-    ** What is with girls and Indian men?
+    ** What is it with girls and Indian men?
     ** Becky saying a big and unathletic-looking Jewish divorced woman in Israel
     told her many Jewish married men offered to have an affair with her.
     ** Even some men can see beyond one's unaesthetical look.
